--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>now i change it becasue of check  the functionality</h1>
+        <h1>aman upadhyay</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
