--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -29,7 +29,7 @@
     <input  type="date" name="date" id="date">
 </div>
 <div><br>
-     <label for="my time">TIME:</label>
+     <label for="my time">TIM=j jhvuvjvufvhgvyitfigviytfyuvyitfdE:</label>
     <input type="time" name="time" id="my time">
 </div>
 <br>
