--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -30,7 +30,7 @@
 </div>
 <div><br>
      <label for="my time">TIM=j jhvuvjvufvhgvyitfigviytfyuvyitfdE:</label>
-    <input type="time" name="time" id="my time">
+    <input type="time" name="tbiugiyguyfufhjdyifudime" id="my time">
 </div>
 <br>
 <div>
